# rbfacalendar

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker-image.yml
backend/: Cargo.toml
backend/docs/: samples.md
backend/src/: calendar.rs  main.rs  rbfa.rs
deployment/: Dockerfile  deploy.yml  info.md
frontend/: angular.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  club.ts  clubs.ts  clubteams.ts  is-object.validator.ts  material.module.ts  mock-teams.ts  rbfa.service.interface.ts  rbfa.service.spec.ts  rbfa.service.ts  team.ts
frontend/src/app/clubs/: clubs.component.html  clubs.component.ts
frontend/src/app/components/: components.module.ts
frontend/src/app/components/clubs/: clubs.component.css  clubs.component.html  clubs.component.ts
frontend/src/app/components/home/: home.component.html  home.component.ts
frontend/src/app/components/loader/: loader.component.css  loader.component.html  loader.component.ts
frontend/src/app/components/open-calendar/: open-calendar.component.html  open-calendar.component.spec.ts  open-calendar.component.ts
frontend/src/app/components/teams/: teams.component.html  teams.component.ts
frontend/src/app/mocks/: mock-clubs.ts  mock-module.ts  mock-rbfa.service.ts  mock-teams.ts
frontend/src/app/services/: loader.service.ts  rbfa.service.interface.ts  rbfa.service.ts
frontend/src/app/teams/: teams.component.ts
frontend/src/environments/: environment.prod.ts  environment.staging.ts  environment.ts
src/: calendar.rs  main.rs  rbfa.rs
webapp/: angular.json  package-lock.json  package.json
webapp/src/app/: app.component.html  app.module.ts
