[package]
name = "rbfacalendar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tim Van Wassenhove"]
publish = false
repository = "https://github.com/timvw/rbfacalendar/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
