[package]
name = "rbfacalendar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tim Van Wassenhove"]
publish = false
repository = "https://github.com/timvw/rbfacalendar/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
ics = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.8", features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = "1.15.0"
