[package]
name = "rbfacalendar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tim Van Wassenhove"]
publish = false
repository = "https://github.com/timvw/rbfacalendar/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
ics = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.10", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = "1.18.2"
url = "2.2.2"
log = "0.4.17"
env_logger = "0.9.0"