[package]
name = "rbfacalendar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tim Van Wassenhove"]
publish = false
repository = "https://github.com/timvw/rbfacalendar/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
ics = "0.5"
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = { version = "0.12.2", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.36.0"
url = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"